kubernetes/apps/default/mealie/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: default
  labels:
    app: mealie
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.26.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: http
          readinessProbe:
            httpGet:
              path: /api/app/about
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/app/about
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
          volumeMounts:
            - name: mealie-data
              mountPath: /app/data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data-pvc-lh
