kubernetes/apps/default/mealie/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: default
  labels:
    app: mealie
spec:
  type: ClusterIP
  selector:
    app: mealie
  ports:
    - name: http
      port: 9000
      targetPort: http
      protocol: TCP
