kubernetes/apps/default/mealie/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mealie.torquasmvo.com`)
      kind: Rule
      services:
        - name: mealie
          namespace: default
          port: 9000
  tls:
    secretName: traefik-dashboard-tls
